src/scss/themes/fylr/components/_menu.scss
// Menu
.cui-menu {
	min-height: 0;
	min-width: 0;
	background: $white;
	border-radius: $menu-border-radius;
	padding: 0;
	height: auto; // WEIRD reset: cui-menu on selects gets class button-select
	
	// add overflow to item-list, so the layer-border applied to cui-menu will be fixed
	> .cui-item-list {
		overflow-x: hidden;
		overflow-y: auto;
		-webkit-overflow-scrolling: touch;
	}

	.cui-item-list-body {
		> .cui-label,
		> .cui-button .cui-button-center {
			max-width: 500px;
		}

		> .cui-button:first-child .cui-button-visual,
		> .cui-button:last-child .cui-button-visual {
			min-height: calc(#{$btn-height} + 2px);
		}

		.cui-menu-item {
			padding: 0 $item-list-indent;
			min-height: $item-list-height;
			font-weight: $font-weight-bold;
			color: $item-list-label-color;
		}
		
		// todo: find an example (these are the ng theme styles)
		> .cui-options:last-child {
			border-top: 1px solid $hr-border-color;
			padding: 6px 0;
			margin-top: 4px;
			margin-bottom: -4px;
			background: red; // todo
			font-size: 12px;
	
			.cui-button-checkbox {
				display: flex;
	
				.cui-button-visual {
					min-height: 0;
					padding: 1px $spacer;
					background: none;
					color: inherit;
				}
			}
		}
	}
}

.cui-menu-divider {
	margin: $spacer-xs 0;
}

